# MARKET-BASKET

./: LICENSE  README.md  app.py  database.py  pyproject.toml  requirements.txt
