[tool.poetry]
name = "repl_nix_basket-boost-website"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.10"
Flask = "^2.3.2"
Flask-FontAwesome = "^0.1.5"
SQLAlchemy = "^2.0.15"
matplotlib = "^3.7.1"
mlxtend = "^0.22.0"
pandas = "^2.0.2"
plotly = "^5.15.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
